- new method SCIPsolGetOrigObj() in pub_sol.h which returns for a solution in the original problem space the objective value
- new method SCIPretransformSol() in scip.h that allows to retransform a solution to the original space

performance improvements:
- performance improvements in prop_vbounds
- child selection rules now get also applied when the relaxation value is equal to the bound changed in branching
- added dual reduction to cons_cumulative.c
- for continuous variables, the pseudo costs update and the pscost branching rule now use the same strategies for updating the pseudo costs and estimating the improvement in the LP bound
- only perform probing if the variables are locked
- performance and memory consumption improvements in xmlparse.c
- avoid very long separation times of LEWIs in cons_knapsack for very large minimal covers
- used SCIPallocMemoryArray instead of SCIPallocBlockMemoryArray which leads to fewer memory consumption in getLiftingSequence() in cons_knapsack, also improved cache use bei using an extra array instead blockmemory chunks
- switched FASTMIP from 1 to 2 for CPLEX and changed default pricing rule back to steepest edge pricing instead of quickstart steepest edge pricing
- made sorting method more robust
- LNS heuristics now use SCIPcopy() by default
- considering inactive variables in undercover heuristic; limiting effort for solving covering problem

fixed bugs:
- fixed bug in propagation of indicator constraints: cannot fix slack variable to 0 if linear constraint is disabled/not active
- fixed bug in cons_bounddisjunction where branching on multiaggregated variables was tried while all aggregation variables are fixed 
- fixed assertion in tree.c w.r.t. node estimation
- fixed bug in presolving of cons_logicor.c: adding variable implications can lead to further reductions; added call to applyFixings()
- fixed bug in cons_linear.c while sorting the eventdatas during the binary variable sorting for propagation