@@ -3195,6 +3195,22 @@ SCIP_RETCODE SCIPlpiSetState(
    return SCIP_OKAY;
 }
 
+/** clears current LPi state (like basis information) of the solver */
+SCIP_RETCODE SCIPlpiClearState(
+   SCIP_LPI*             lpi                 /**< LP interface structure */
+   )
+{
+   SCIPdebugMessage("calling SCIPlpiClearState()\n");
+
+   assert(lpi != 0);
+   assert(lpi->clp != 0);
+
+   lpi->clp->allSlackBasis(true);
+   lpi->validFactorization = false;
+
+   return SCIP_OKAY;
+}
+
 /** frees LPi state information */
 SCIP_RETCODE SCIPlpiFreeState(
    SCIP_LPI*             lpi,                /**< LP interface structure */
